adaded animation for rogue and added new item for mana